--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,4 @@
-#frame {
-	width: 100%;
-	margin: 0 auto;
-}
+*{margin: 0px; padding: 0px;}
 
 #header {
 	position: fixed;
@@ -33,8 +30,6 @@
 #header li a:hover {
 	color: #BF320F;
 }
-
-
 
 
 
