--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,25 +1,29 @@
-*{margin: 0px; padding: 0px;}
+#frame {
+	width: 100%;
+	margin: 0 auto;
+}
 
 #header {
 	position: fixed;
 	width: 100%;
-	height: 100px;
 	top: 0px; 	/* 위쪽 공백 메우기 */
 	left: 0px;  /* 왼쪽 공백 메우기 */
-	font-size: 15px;
 	background-color: #eee;
+	border: 1px solid #bcbcbc;
+	padding-top: 50px;
+	font-size: 15px;
 	text-align: right;
 }
 
 #header ul {
-	margin-top: 39px; /* 글자 가운데 정렬위해서 */
-	margin-right: 100px; /* 글자 오른쪽에서 띄우기 */
+	padding-top: 35px; /* 글자 가운데 정렬위해서 */
+	padding-right: 100px; /* 글자 오른쪽에서 띄우기 */
 	display: inline-block;
 }
 
 #header li {
 	display: inline; 
-	margin-right: 28px; /* 글자 간 간격 */
+	padding-right: 28px; /* 글자 간 간격 */
 }
 
 #header li a {
@@ -32,15 +36,28 @@
 }
 
 
+#container {
+	overflow: hidden;
+}
+
+#content {
+	width: 100%;
+	height: 450px;
+	background-color: #FF9898;
+	margin-top: 150px;
+	border: 1px solid #bcbcbc;
+}
+
 
 #footer {
 	position: fixed;
 	width: 100%;
-	height: 150px;
 	background-color: #FFFFFF;
 	left: 0px;  /* 왼쪽 공백 메우기 */
 	bottom: 0px;
 	text-align: center;
 	font-size: 15px;
+	padding-bottom: 50px;
 	background-color: #ABC;
+	border: 1px solid #bcbcbc;
 }
